--- a/index.html
+++ b/index.html
@@ -16,33 +16,36 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="web-container">
+        <!-- ===MAIN===-->
         <main>
             <!-- NAVIGATION-->
             <nav>
-                <div>
+                <div class="logo">
                     <img src="Assets/logo-dark.svg" alt="Logo of the skilled company">
                 </div>
                 <a href="#" class="btn">Get Started</a>
             </nav>
             <!--HERO-->
-            <div class="hero">
+            <section class="hero">
                 <div class="hero-text">
                     <h1>Maximize skill, minimize budget</h1>
                     <p>
-                        Our modern courses across a range of in-demand skills will give you the knowledge you need to
+                        Our modern courses across a range of in&#8209demand skills will give you the knowledge you
+                        need to
                         live the life you want.
                     </p>
                     <a href="#" class="btn">Get Started</a>
                 </div>
                 <div class="hero-img">
                     <picture>
-                        <source media="(max-width:767px)" srcset="Assets/image-hero-mobile.webp">
-                        <img src="Assets/image-hero-desktop.webp"
-                            alt="Photo of a  woman in front of a laptop, with a total numer of course hours-1451 and members-29000">
+                        <source media="(min-width:1440px)" srcset="./Assets/image-hero-desktop.webp">
+                        <source media="(min-width:768px)" srcset="./Assets/image-hero-tablet.webp">
+                        <img src="./Assets/image-hero-mobile.webp"
+                            alt="Photo of a  woman with a total numer of course hours-1451 and members-29000">
                     </picture>
                 </div>
-            </div>
+            </section>
         </main>
         <!-- COURSE SECTION-->
         <section class="courses">
@@ -52,64 +55,73 @@
             <div class="course-box">
                 <div class="icon">
                     <img src="Assets/icon-animation.svg" alt="An animation icon of runnign man">
+                </div>
+                <div class="course-box-description">
                     <h4>Animation</h4>
                     <p>
                         Learn the latest animation techniques to create stunning motion design and captivate your
                         audience.
                     </p>
-                    <a href="#">Get Started</a>
                 </div>
+                <a href="#">Get Started</a>
             </div>
             <div class="course-box">
                 <div class="icon">
                     <img src="Assets/icon-design.svg" alt="A design icon">
+                </div>
+                <div class="course-box-description">
                     <h4>Design</h4>
                     <p>
                         Create beautiful, usable interfaces to help shape the future of how the web looks.
                     </p>
-                    <a href="#">Get Started</a>
                 </div>
+                <a href="#">Get Started</a>
             </div>
             <div class="course-box">
                 <div class="icon">
                     <img src="Assets/icon-photography.svg" alt="A photography icon of a camera">
+                </div>
+                <div class="course-box-description">
                     <h4>Photography</h4>
                     <p>
                         Explore critical fundamentals like lighting, composition, and focus to capture exceptional
                         photos.
                     </p>
-                    <a href="#">Get Started</a>
                 </div>
+                <a href="#">Get Started</a>
             </div>
             <div class="course-box">
                 <div class="icon">
                     <img src="Assets/icon-crypto.svg" alt="A crypto icon">
+                </div>
+                <div class="course-box-description">
                     <h4>Crypto</h4>
                     <p>
                         All you need to know to get started investing in crypto. Go from beginner to advanced with
-                        this
-                        54 hour course.
+                        this 54 hour course.
                     </p>
-                    <a href="#">Get Started</a>
                 </div>
+                <a href="#">Get Started</a>
             </div>
             <div class="course-box">
                 <div class="icon">
                     <img src="Assets/icon-business.svg" alt="A business icon of a bag">
+                </div>
+                <div class="course-box-description">
                     <h4>Business</h4>
                     <p>
                         A step-by-step playbook to help you start, scale, and sustain your business without outside
                         investment.
                     </p>
-                    <a href="#">Get Started</a>
                 </div>
+                <a href="#">Get Started</a>
             </div>
         </section>
         <footer>
-            <div class="footer-container">
+            <div class="logo">
                 <img src="Assets/logo-light.svg" alt="Logo of the skilled company">
-                <a href="#" class="btn">Get Started</a>
             </div>
+            <a href="#" class="btn">Get Started</a>
         </footer>
     </div>
 
